Replaces entity getters/setters with lombok annotations. Simplified members page