@@ -4,6 +4,8 @@ import com.codaconsultancy.centenaryclubadmin.mappers.LotteryDrawMapper;
 import com.codaconsultancy.centenaryclubadmin.view.LotteryDrawViewBean;
 import jakarta.persistence.*;
 import jakarta.validation.constraints.NotNull;
+import lombok.Getter;
+import lombok.Setter;
 import org.springframework.format.annotation.DateTimeFormat;
 
 import java.util.ArrayList;
@@ -14,76 +16,40 @@ import java.util.List;
 @Table(name = "lottery_draws")
 public class LotteryDraw {
 
+    @Getter
+    @Setter
     @Id
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
+    @Getter
+    @Setter
     @Column(name = "DRAW_DATE")
     @NotNull
     @DateTimeFormat(pattern = "dd/MM/yyyy")
     private Date drawDate;
 
+    @Getter
+    @Setter
     @Column(name = "LOTTERY_DATE")
     @DateTimeFormat(pattern = "dd/MM/yyyy")
     private Date lotteryDate;
 
+    @Getter
+    @Setter
     @Column(name = "NAME")
     private String name;
 
+    @Getter
+    @Setter
     @Column(name = "DRAW_MASTER")
     @NotNull
     private String drawMaster;
 
+    @Getter
+    @Setter
     @OneToMany(mappedBy = "lotteryDraw")
     private List<Prize> prizes = new ArrayList<>();
-
-    public Long getId() {
-        return id;
-    }
-
-    public void setId(Long id) {
-        this.id = id;
-    }
-
-    public Date getDrawDate() {
-        return drawDate;
-    }
-
-    public void setDrawDate(Date drawDate) {
-        this.drawDate = drawDate;
-    }
-
-    public Date getLotteryDate() {
-        return lotteryDate;
-    }
-
-    public void setLotteryDate(Date lotteryDate) {
-        this.lotteryDate = lotteryDate;
-    }
-
-    public String getName() {
-        return name;
-    }
-
-    public void setName(String name) {
-        this.name = name;
-    }
-
-    public String getDrawMaster() {
-        return drawMaster;
-    }
-
-    public void setDrawMaster(String drawMaster) {
-        this.drawMaster = drawMaster;
-    }
-
-    public List<Prize> getPrizes() {
-        return prizes;
-    }
-
-    public void setPrizes(List<Prize> prizes) {
-        this.prizes = prizes;
-    }
 
     @Transient
     public String showPrizesSummary() {
@@ -93,8 +59,8 @@ public class LotteryDraw {
             Member winner = prize.getWinner();
             summary.append(prize.getPrize()).append(": ")
                     .append(winner.getForename()).append(" ").append(winner.getSurname());
-            if (null != winner.getAddresses().get(0).getTown() && !winner.getAddresses().get(0).getTown().isEmpty()) {
-                summary.append(", ").append(winner.getAddresses().get(0).getTown());
+            if (null != winner.getAddresses().getFirst().getTown() && !winner.getAddresses().getFirst().getTown().isEmpty()) {
+                summary.append(", ").append(winner.getAddresses().getFirst().getTown());
             }
             Long membershipNumber = winner.getMembershipNumber();
             String memberNumberDisplay = String.format("%d", membershipNumber);
